--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -8,12 +8,12 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: #040000;
   }
 }
 
 html,
-body {
+body {  
   max-width: 100vw;
   overflow-x: hidden;
 }
